--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=talent_scouting_backend
 
 #database URL
-spring.datasource.url=jdbc:mysql://localhost:3307/talent_scouting_backend
+spring.datasource.url=jdbc:mysql://10.22.68.105:3306/talent_scouting
 
 #Credentials
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 #driver class name
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
