--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=talent_scouting_backend
 
 #database URL
-spring.datasource.url=jdbc:mysql://10.22.68.105:3306/talent_scouting
+#spring.datasource.url=jdbc:mysql://10.22.68.105:3306/talent_scouting
+spring.datasource.url=jdbc:mysql://localhost:3306/talent_scouting
 
 #Credentials
 spring.datasource.username=root
