--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=talent_scouting_backend
 
 #database URL
-spring.datasource.url=jdbc:mysql://10.22.68.105:3306/talent_scouting
-#spring.datasource.url=jdbc:mysql://localhost:3306/talent_scouting
+#spring.datasource.url=jdbc:mysql://10.22.68.105:3306/talent_scouting
+spring.datasource.url=jdbc:mysql://localhost:3307/talent_scouting_backend
 
 #Credentials
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 #driver class name
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,6 +15,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #hibernate will update the database schema, when there are changes made to the entities (good for development but not recommended in production)
 spring.jpa.hibernate.ddl-auto=update
+
 
 #hibernate will output SQL Statements it executes (to the console or log files)
 spring.jpa.show-sql=true
